--- a/polybookexchange/templates/polybookexchange/templatetags/show_book.html
+++ b/polybookexchange/templates/polybookexchange/templatetags/show_book.html
@@ -4,7 +4,7 @@
 <div class="well well-sm">
 
 
-    <a href="{{ book.coverURL }}" class="pull-right"><img src="{{ book.get_current_cover }}" width="250" border="0" class="img-thumbnail"></a>
+    <a href="{{ book.get_current_cover }}" class="pull-right"><img src="{{ book.get_current_cover }}" width="250" border="0" class="img-thumbnail"></a>
 
     <h3>{{book.title}}</h3>
 
