--- a/polybookexchange/templates/polybookexchange/base.html
+++ b/polybookexchange/templates/polybookexchange/base.html
@@ -33,90 +33,90 @@
 
 <body>
 
-       <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="{% url 'polybookexchange.views.home' %}"><img src="{% static 'polybookexchange/logo-agep.png' %}" height="40" style="margin-top: -8px;"> {% trans "AGEPoly's book exchange" %}</a>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{% url 'polybookexchange.views.home' %}">
+                    <img src="{% static 'polybookexchange/logo-agep.png' %}" height="40" style="margin-top: -8px;"> {% trans "AGEPoly's book exchange" %}
+                </a>
 
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#" onclick="return false;">{% trans "Welcome" %} {{user.get_full_name}}</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Language" %}<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            {% for lang in LANGUAGES %}
+                                <li>
+                                    <a href="#" onclick="document.setLang{{ lang.1 }}.submit();return false;">{{ lang.1 }}</a>
+                                    <form name="setLang{{lang.1}}" action="{% url 'set_language' %}" method="POST">{% csrf_token %}
+                                        <input type="hidden" name="language" value="{{ lang.0 }}" />
+                                    </form>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                    <li><a href="{% url 'logout' %}?next={% url 'polybookexchange.views.home' %}">{% trans "Logout" %}</a></li>
+                    <li><a href="https://agepoly.ch">{% trans "Back to the AGEPoly's website" %}</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-              <li><a href="#" onclick="return false;">{% trans "Welcome" %} {{user.get_full_name}}</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Language" %}<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        {% for lang in LANGUAGES %}
-                            <li>
-                                <a href="#" onclick="document.setLang{{ lang.1 }}.submit();return false;">{{ lang.1 }}</a>
-                                <form name="setLang{{lang.1}}" action="{% url 'set_language' %}" method="POST">{% csrf_token %}
-                                    <input type="hidden" name="language" value="{{ lang.0 }}" />
-                                </form>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </li>
-
-              </li>
-              <li><a href="{% url 'logout' %}?next={% url 'polybookexchange.views.home' %}">{% trans "Logout" %}</a></li>
-              <li><a href="https://agepoly.ch">{% trans "Back to the AGEPoly's website" %}</a></li>
-          </ul>
-        </div>
-      </div>
     </div>
 
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
-            <li class="dropdown-header">{% trans "General" %}</li>
-            <li id="polybook-menu-home"><a href="{% url 'polybookexchange.views.home' %}">{% trans "Home" %}</a></li>
-            <li id="polybook-menu-howto"><a href="{% url 'polybookexchange.views.howto' %}">{% trans "How does it works ?" %}</a></li>
-          </ul>
-          <ul class="nav nav-sidebar">
-            <li class="dropdown-header">{% trans "Buy books" %}</li>
-            <li id="polybook-menu-search"><a href="{% url 'polybookexchange.views.search' %}">{% trans "Search" %}</a></li>
-            <li id="polybook-menu-browse"><a href="{% url 'polybookexchange.views.browse' %}">{% trans "Browse" %}</a></li>
-            <li id="polybook-menu-buyedbooks"><a href="{% url 'polybookexchange.views.purchases' %}">{% trans "Purchases" %}</a></li>
-          </ul>
-          <ul class="nav nav-sidebar">
-            <li class="dropdown-header">{% trans "Sell books" %}</li>
-            <li id="polybook-menu-propose"><a href="{% url 'polybookexchange.views.propose' %}">{% trans "Propose a new book" %}</a></li>
-            <li id="polybook-menu-proposed"><a href="{% url 'polybookexchange.views.proposed' %}">{% trans "Your propositions" %}</a></li>
-            <li id="polybook-menu-sales"><a href="{% url 'polybookexchange.views.sales' %}">{% trans "Books sold or in sale" %}</a></li>
-          </ul>
+        <div class="row">
+            <div class="col-sm-3 col-md-2 sidebar">
+                <ul class="nav nav-sidebar">
+                    <li class="dropdown-header">{% trans "General" %}</li>
+                    <li id="polybook-menu-home"><a href="{% url 'polybookexchange.views.home' %}">{% trans "Home" %}</a></li>
+                    <li id="polybook-menu-howto"><a href="{% url 'polybookexchange.views.howto' %}">{% trans "How does it works ?" %}</a></li>
+                </ul>
+                <ul class="nav nav-sidebar">
+                    <li class="dropdown-header">{% trans "Buy books" %}</li>
+                    <li id="polybook-menu-search"><a href="{% url 'polybookexchange.views.search' %}">{% trans "Search" %}</a></li>
+                    <li id="polybook-menu-browse"><a href="{% url 'polybookexchange.views.browse' %}">{% trans "Browse" %}</a></li>
+                    <li id="polybook-menu-buyedbooks"><a href="{% url 'polybookexchange.views.purchases' %}">{% trans "Purchases" %}</a></li>
+                </ul>
+                <ul class="nav nav-sidebar">
+                    <li class="dropdown-header">{% trans "Sell books" %}</li>
+                    <li id="polybook-menu-propose"><a href="{% url 'polybookexchange.views.propose' %}">{% trans "Propose a new book" %}</a></li>
+                    <li id="polybook-menu-proposed"><a href="{% url 'polybookexchange.views.proposed' %}">{% trans "Your propositions" %}</a></li>
+                    <li id="polybook-menu-sales"><a href="{% url 'polybookexchange.views.sales' %}">{% trans "Books sold or in sale" %}</a></li>
+                </ul>
 
-          {% if user.is_staff %}
-            <ul class="nav nav-sidebar">
-                <li class="dropdown-header">{% trans "Admin" %}</li>
-                <li id="polybook-menu-admin"><a href="{% url 'polybookexchange.views.admin' %}">{% trans "Administration's home" %}</a></li>
-            </ul>
-        {% endif %}
+                {% if user.is_staff %}
+                    <ul class="nav nav-sidebar">
+                        <li class="dropdown-header">{% trans "Admin" %}</li>
+                        <li id="polybook-menu-admin"><a href="{% url 'polybookexchange.views.admin' %}">{% trans "Administration's home" %}</a></li>
+                    </ul>
+                {% endif %}
 
-            <h4>{% trans "Statistics" %}</h4>
+                <h4>{% trans "Statistics" %}</h4>
 
-            {% show_stats %}
+                {% show_stats %}
+
+            </div>
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                {% block content %}
+                {% endblock %}
+            </div>
+
+            <div class="footer">
+
+                &copy; Maximilien Cuony, based on Loïc Etienne and Aristidis Papaioannou's work - 2014 - <a href="http://opensource.org/licenses/BSD-2-Clause" target="_blank">BSD</a> - <a href="http://agepoly.epfl.ch">AGEPoly</a>/<a href="http://polylan.ch">PolyLAN</a> - <a href="https://github.com/PolyLAN/polybookexchange">{% trans "Fork me on Github!" %}</a>
+                <br />
+                Using <a href="https://www.djangoproject.com/" target="_blank">Django</a> with <a href="http://djangopony.com/" target="_blank">ponies and magic</a> and <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>.
+
+            </div>
 
         </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          {% block content %}
-          {% endblock %}
-        </div>
-
-        <div class="footer">
-
-            &copy; Maximilien Cuony, based on Loïc Etienne and Aristidis Papaioannou's work - 2014 - <a href="http://opensource.org/licenses/BSD-2-Clause" target="_blank">BSD</a> - <a href="http://agepoly.epfl.ch">AGEPoly</a>/<a href="http://polylan.ch">PolyLAN</a> - <a href="https://github.com/PolyLAN/polybookexchange">{% trans "Fork me on Github!" %}</a>
-            <br />
-            Using <a href="https://www.djangoproject.com/" target="_blank">Django</a> with <a href="http://djangopony.com/" target="_blank">ponies and magic</a> and <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>.
-
-        </div>
-
-      </div>
 
     </div>
 
