Update boursobouquins septembre 2022

--- a/polybookexchange/templates/polybookexchange/propose.html
+++ b/polybookexchange/templates/polybookexchange/propose.html
@@ -13,10 +13,10 @@
         </div>
     {% endif %}
 
-    {% trans "This page is the first step in the process to sell your book. You will pre-register the book in our database. You will then get a recepie that you need to bring your book at AGEPoly's event (from Tuesday, March 1, 2022 to Thursday, March 3, 2022 between 9:00 AM and 5:00 PM at CE1 515)." %}<br /><br />
+    {% trans "This page is the first step in the process to sell your book. You will pre-register the book in our database. You will then get a receipt that you need to bring your book at AGEPoly's event (from Tuesday, September 27, 2022 to Thursday, September 29, 2022 between 8:45 AM and 5:15 PM at CO floor 0)." %}<br /><br />
 
     <div class="alert alert-warning">
-        {% trans "Once the book is submitted, you have to bring it to AGEPoly's book exchange at CE1 515 from Tuesday, March 1, 2022 to Thursday, March 3, 2022 between 9:00 AM and 5:00 PM!" %}
+        {% trans "Once the book is submitted, you have to bring it to AGEPoly's book exchange at CO floor 0 from Tuesday, September 27, 2022 to Thursday, September 29, 2022 between 8:15 AM and 5:15 PM!" %}
     </div>
 
     <form method="POST" onsubmit="if (!$('#terms').is(':checked')) { alert('{% trans "Please accepts terms!" %}'); return false }">
